// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student works Container Action should return the correct constant for getGradeDataRequestSuccess 1`] = `
Object {
  "gradeObj": undefined,
  "schoolid": undefined,
  "type": "app/PortfolioPageContainer/SET_GRADE",
}
`;

exports[`Student works Container Action should return the correct constant for getGradeDetailsRequest 1`] = `
Object {
  "schoolid": undefined,
  "type": "app/PortfolioPageContainer/GET_GRADE",
  "userType": undefined,
}
`;

exports[`Student works Container Action should return the correct constant for getPortfolioClassDetailsRequest 1`] = `
Object {
  "adminType": undefined,
  "teacherId": undefined,
  "type": "app/PortfolioPageContainer/GET_PORTFOLIO_CLASS_DATA",
  "userType": undefined,
}
`;

exports[`Student works Container Action should return the correct constant for getSchoolDataRequestSuccess 1`] = `
Object {
  "classObj": undefined,
  "type": "app/PortfolioPageContainer/SET_CLASS",
}
`;

exports[`Student works Container Action should return the correct constant for getSchoolDetailsRequest 1`] = `
Object {
  "distId": undefined,
  "type": "app/PortfolioPageContainer/GET_SCHOOL",
}
`;

exports[`Student works Container Action should return the correct constant for getStudentEnrolment 1`] = `
Object {
  "data": undefined,
  "type": "app/PortfolioPageContainer/GET_STUDENT_ENROLMENT_DATA",
}
`;

exports[`Student works Container Action should return the correct constant for getStudentsSubmissionMetadata 1`] = `
Object {
  "classId": undefined,
  "type": "app/PortfolioPageContainer/GET_STUDENT_SUBMISSION_META_DATA_SW",
}
`;

exports[`Student works Container Action should return the correct constant for getStudentsSubmissionNodeList 1`] = `
Object {
  "data": undefined,
  "type": "app/PortfolioPageContainer/SET_PORTFOLIO_STUDENT_NODE_LIST",
}
`;

exports[`Student works Container Action should return the correct constant for getStudentsSubmissionTreeList 1`] = `
Object {
  "adminType": undefined,
  "data": undefined,
  "type": "app/PortfolioPageContainer/GET_PORTFOLIO_STUDENT_ENROLMENT_TREE_DATA",
  "userType": undefined,
}
`;

exports[`Student works Container Action should return the correct constant for getTeacherDataRequestSuccess 1`] = `
Object {
  "teacherObj": undefined,
  "type": "app/PortfolioPageContainer/SET_TEACHERS",
}
`;

exports[`Student works Container Action should return the correct constant for getTeachersDetailsRequest 1`] = `
Object {
  "adminType": undefined,
  "gradeId": undefined,
  "type": "app/PortfolioPageContainer/GET_TEACHERS",
  "userType": undefined,
}
`;

exports[`Student works Container Action should return the correct constant for setGradeDataRequestSuccess 1`] = `
Object {
  "gradeId": undefined,
  "type": "app/PortfolioPageContainer/SET_GRADE_ID",
}
`;

exports[`Student works Container Action should return the correct constant for setPortfolioSelectedGradeId 1`] = `
Object {
  "gradeId": undefined,
  "type": "app/PortfolioPageContainer/SET_PORTFOLIO_GRADE_ID",
}
`;

exports[`Student works Container Action should return the correct constant for setPortfolioSelectedTeacherId 1`] = `
Object {
  "data": undefined,
  "type": "app/PortfolioPageContainer/SET_PORTFOLIO_TEACHER_ID",
}
`;

exports[`Student works Container Action should return the correct constant for setStudentEnrolmentDataSuccess 1`] = `
Object {
  "data": undefined,
  "type": "app/PortfolioPageContainer/SET_STUDENT_ENROLMENT_DATA",
}
`;

exports[`Student works Container Action should return the correct constant for setStudentRequestSuccess 1`] = `
Object {
  "data": undefined,
  "type": "app/PortfolioPageContainer/SET_STUDENT_SUBMISSION_META_DATA",
}
`;

exports[`Student works Container Action should return the correct constant for setStudentsSubmissionTreeList 1`] = `
Object {
  "data": undefined,
  "type": "app/PortfolioPageContainer/SET_PORTFOLIO_STUDENT_ENROLMENT_TREE_DATA",
}
`;
